Add bar functionality.

--- a/codereview/codereview.scss
+++ b/codereview/codereview.scss
@@ -3,3 +3,12 @@
 		list-style-type: none;
 	}
 }
+
+#bars {
+	li {
+		list-style-type: none;
+		margin: 0px;
+		padding: 0px auto;
+		display: block;
+	}
+}
